--- a/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2c.xml
+++ b/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2c.xml
@@ -392,10 +392,9 @@
                                                 <span t-esc="doc.get_ksa_12(line.zatca_id)"
                                                       t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                                             </td>
-                                           <!-- <td class="invline_data">
-                                                <span t-esc="doc.get_bt_136(line.zatca_id)"
-                                                      t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
-                                            </td>-->
+                                            <td class="invline_data">
+                                                
+                                            </td>
                                             <td class="invline_data">
                                                 <span t-esc="doc.get_bt_146(line.zatca_id)"
                                                       t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
