--- a/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2c.xml
+++ b/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2c.xml
@@ -368,13 +368,13 @@
                                             <br/>
                                             <span class="label_column">Price</span>
                                         </th>
+                                         <th class="invline_column">
+                                            
+                                        </th>
                                         <th class="invline_column">
                                             <span class="label_column arabic_label">الكمية</span>
                                             <br/>
                                             <span class="label_column">Quantity</span>
-                                        </th>
-                                        <th class="invline_column">
-                                            
                                         </th>
 
                                         <!--                                <th class="invline_column" style="text-align:center;">-->
@@ -395,12 +395,16 @@
                                                 <span t-esc="doc.get_ksa_12(line.zatca_id)"
                                                       t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                                             </td>
-                                            <td class="invline_data">
-
-                                            </td>
+                                           <!-- <td class="invline_data">
+                                                <span t-esc="doc.get_bt_136(line.zatca_id)"
+                                                      t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
+                                            </td>-->
                                             <td class="invline_data">
                                                 <span t-esc="doc.get_bt_146(line.zatca_id)"
                                                       t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
+                                            </td>
+                                            <td class="invline_data">
+
                                             </td>
                                             <td class="invline_data">
                                                 <t t-esc="line.quantity"/>
