--- a/custom-addons/product_arabic/views/product_template_views.xml
+++ b/custom-addons/product_arabic/views/product_template_views.xml
@@ -10,7 +10,7 @@
         <field name="arch" type="xml">
             <xpath expr="//div[hasclass('oe_title')]/h1" position="inside">
                 <label class="oe_edit_only" for="product_arabic"
-                       string="Arabic Name"/>
+                       string="الاسم اللاتيني"/>
                 <h1>
                     <field name="product_arabic" style="text-align: right"/>
                 </h1>
