--- a/custom-addons/ksa_zatca_integration/static/src/css/style.css
+++ b/custom-addons/ksa_zatca_integration/static/src/css/style.css
@@ -1,3 +1,25 @@
+.font{
+    font-family:'traditional_arabic';;font-weight:100;font-size: 13px;
+    }
+    
+    @font-face {
+        font-family: 'DroidArabicKufiBold';
+        src: url('/ksa_zatca_integration/static/src/fonts/DroidKufi-Bold.ttf') format('truetype');
+        font-weight: bold;
+        font-style: normal;
+          }
+    
+    @font-face {
+        font-family: 'DroidArabicKufiRegular';
+        src: url('/ksa_zatca_integration/static/src/fonts/DroidKufi-Regular.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+    }
+    
+    .arabic{
+        font-family:DroidArabicKufiRegular !important;
+    }
+    
 .o_card_parent {
     border: 1px solid #ddd;
     background: white;
