--- a/custom-addons/ksa_zatca_integration/reports/report.xml
+++ b/custom-addons/ksa_zatca_integration/reports/report.xml
@@ -84,7 +84,7 @@
         <field name="binding_type">report</field>
     </record>
 
-    <record id="preview_action_report_tax_invoice" model="ir.actions.report">
+    <!-- <record id="preview_action_report_tax_invoice" model="ir.actions.report">
         <field name="name">Preview Saudi VAT Invoice Report</field>
         <field name="model">account.move</field>
         <field name="report_type">qweb-pdf</field>
@@ -93,7 +93,7 @@
         <field name="print_report_name">(object._get_report_base_filename())</field>
         <field name="binding_model_id" ref="account.model_account_move"/>
         <field name="binding_type">report</field>
-    </record>
+    </record> -->
 
     <record id="action_report_simplified_tax_invoice" model="ir.actions.report">
         <field name="name">Simplified VAT Invoice Report</field>
