--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -85,12 +85,14 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='invoice_line_ids']/tree//field[@name='discount']" position="after">
+                <field name="uom_name" />
 
-
-                  <field name="name_field" />
-                                    <field name="product_uom_id"/>
+                  <!-- <field name="name_field" />
+                                    <field name="product_uom_id"/> -->
 
             </xpath>
+
+            
         </field>
     </record>
 
