--- a/custom-addons/ksa_zatca_integration_pos/static/src/css/style.css
+++ b/custom-addons/ksa_zatca_integration_pos/static/src/css/style.css
@@ -7,3 +7,8 @@
   background-color: #FFFFFF;
   border-color: #FFFFFF;
 }
+
+.pos-receipt .pos-receipt-qrcode {
+  display: block;
+  margin: 0 auto;
+}
