--- a/custom-addons/ksa_zatca_integration_pos/views/cron.xml
+++ b/custom-addons/ksa_zatca_integration_pos/views/cron.xml
@@ -1,7 +1,7 @@
 <odoo>
     <data>
         <!-- Cron Job to send unsent orders to ZATCA -->
-        <record id="ir_cron_send_zatca_orders" model="ir.cron">
+        <!-- <record id="ir_cron_send_zatca_orders" model="ir.cron">
             <field name="name">Send Unsent Orders to ZATCA</field>
             <field name="model_id" ref="point_of_sale.model_pos_order"/>
             <field name="state">code</field>
@@ -12,10 +12,10 @@
             <field name="numbercall">-1</field>
             <field name="nextcall" eval="(DateTime.now().replace(hour=16, minute=0) + timedelta(days=1)).strftime('%Y-%m-%d %H:%M:%S')" />
             <field name="user_id" ref="base.user_root"/>
-        </record>
+        </record> -->
 
         <!-- Another cron job at 2 AM -->
-        <record id="ir_cron_send_zatca_orders_night" model="ir.cron">
+        <!-- <record id="ir_cron_send_zatca_orders_night" model="ir.cron">
             <field name="name">Send Unsent Orders to ZATCA at 2 AM</field>
             <field name="model_id" ref="point_of_sale.model_pos_order"/>
             <field name="state">code</field>
@@ -25,6 +25,6 @@
             <field name="interval_type">days</field>
             <field name="numbercall">-1</field>
             <field name="nextcall" eval="(DateTime.now().replace(hour=2, minute=0) + timedelta(days=1)).strftime('%Y-%m-%d %H:%M:%S')" />            <field name="user_id" ref="base.user_root"/>
-        </record>
+        </record> -->
     </data>
 </odoo>
