--- a/custom-addons/ksa_zatca_integration/views/account_journal_views.xml
+++ b/custom-addons/ksa_zatca_integration/views/account_journal_views.xml
@@ -9,7 +9,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//page[@name='advanced_settings']/group" position="after">
                     <group string="Zatcka Integaration">
-                        <field name="name" />
+                        <field name="branch_name" />
                         <field name="cr"/>
                         <field name="street" />
                         <field name="street2"/>
